--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h1>Qual o número secreto</h1>
                     <p class="paragrafo">Escolha um número entre 1 a 10</p>
                 </div>
-                <input type="number" min="1" max="10" class="containerInput">
+                <input type="number" min="1" max="10" class="containerInput" id="myinput">
                 <div class="containerBotoes">
                     <button onclick="verificarNumero()"
                     id="chutar" class="botao">Chutar</button>
